minor fixes of deprecated methods